--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,6 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     ksp "androidx.room:room-compiler:$room_version"
     debugImplementation "androidx.compose.ui:ui-tooling"
+    implementation "androidx.compose.material:material-icons-extended"
 
 }
