Salvataggio della versione stabile con dati presi dal database locale

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,5 +25,6 @@
             </intent-filter>
         </activity>
     </application>
+    <queries> <package android:name="com.whatsapp" /> </queries>
 
 </manifest>
