--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp' version '1.8.0-1.0.8'
+//    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10'
+    id("org.jetbrains.kotlin.plugin.serialization") version "1.8.20-RC"
 }
 
 android {
@@ -68,5 +70,18 @@ dependencies {
     ksp "androidx.room:room-compiler:$room_version"
     debugImplementation "androidx.compose.ui:ui-tooling"
     implementation "androidx.compose.material:material-icons-extended"
+// Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+// Retrofit with Scalar Converter
+//    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
 
+    // Retrofit with Kotlin serialization Converter
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
+
+    // Kotlin serialization
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
+
+    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
+
+    implementation "com.google.code.gson:gson:2.8.5"
 }
