--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,15 @@ dependencies {
     // Kotlin serialization
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
 
-    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
+   implementation "com.squareup.retrofit2:converter-gson:2.5.0"
 
     implementation "com.google.code.gson:gson:2.8.5"
+
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+
+
 }
